# 20260224_comparaison_location_achat

./: .gitignore  AGENTS.md  README.md  TODO_LIST.md  parametres.defaut.yaml  parametres.utilisateur.yaml  pyproject.toml
docs/: campagne_resultats.json  campagne_top5_ko.json  diagnostic_parametres_legacy.md  diagnostic_rapports_auto.md  diagnostic_scenarios.md  regles_pel_minimales.md  validation.md
old_excel/: simulation_investissements_locatif.xlsx  simulation_investissements_principale.xlsx
scenarios/: README.md  parametres.defaut__B01_bug2030_derniere_echeance.yaml  parametres.defaut__B02_bug2030_taux_capital.yaml  parametres.defaut__B03_bug2030_decalage_debut.yaml  parametres.defaut__E01_6_mois.yaml  parametres.defaut__E02_40_ans.yaml  parametres.defaut__E03_debut_milieu_annee.yaml  parametres.defaut__E04_inflation_zero.yaml  parametres.defaut__E05_inflation_10.yaml  parametres.defaut__E06_inflation_negative.yaml  parametres.defaut__E07_rendement_zero.yaml  parametres.defaut__E08_crash_marche.yaml  parametres.defaut__E09_emprunt_cher_apport_zero.yaml  parametres.defaut__E10_pas_invest.yaml  parametres.defaut__E11_salaire_nul_periode.yaml  parametres.defaut__E12_depenses_sup_salaire.yaml  parametres.defaut__E13_loyer_nul_vacance_100.yaml  parametres.defaut__E14_emprunt_5_ans.yaml  parametres.defaut__E15_emprunt_30_ans.yaml  parametres.defaut__S01_sans_immo.yaml  parametres.defaut__S02_rp.yaml  parametres.defaut__S03_locatif_seul.yaml  parametres.defaut__S04_rp_puis_locatif.yaml  parametres.defaut__S05_inflation_moderee.yaml
scripts/: README.md  (+3 more)
(+31 files in other folders)
